2012-01-19  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/etc/asq.c.pamphlet: Fix bitrot.

2012-01-16  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/ncomp.boot: Extend scope of macros
	to the end of file.

2012-01-16  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/compiler.boot, src/interp/define.boot,
	src/interp/ncomp.boot: Support macros with parameters.
	src/algebra/distro.spad.pamphlet: Avoid error discovered
	by the change.

2012-01-16  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/postpar.boot: Allow simplified declaration
	of constants.

2012-01-14  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/bootlex.lisp, src/interp/debug.lisp,
	src/interp/define.boot, src/interp/primitives.lisp,
	src/interp/spad.lisp, src/interp/trace.boot,
	src/algebra/files.spad.pamphlet,
	src/algebra/integer.spad.pamphlet: Misc cleanups.

2012-01-14  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Convert S_process to Boot.
	* src/interp/spad.lisp: delete S_process, add Boot
	version to:
	src/interp/ncomp.boot

2012-01-14  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/nlib.lisp: Do not add "NIL" extension
	to file names.

2012-01-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/vmlisp.lisp: Workaround for opening
	named pipes.

2012-01-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/si.spad.pamphlet,
	src/algebra/table.spad.pamphlet,
	src/algebra/sf.spad.pamphlet,
	src/algebra/string.spad.pamphlet,
	src/algebra/u32vec.spad.pamphlet,
	src/algebra/modhpsol.spad.pamphlet,
	src/algebra/array1.spad.pamphlet,
	src/interp/scan.boot, src/interp/nrunfast.boot,
	src/interp/clam.boot, src/interp/slam.boot,
	src/interp/debug.lisp, src/interp/preparse.lisp,
	src/interp/primitives.lisp, src/interp/bootlex.lisp,
	src/interp/interop.boot, src/interp/g-opt.boot,
	src/interp/g-util.boot, src/interp/pf2sex.boot,
	src/interp/i-funsel.boot, src/interp/g-boot.boot,
	src/interp/macros.lisp, src/interp/vmlisp.lisp: