@@ -10,4 +10,4 @@
 )boot $bootStrapMode := false
 )boot $tryRecompileArguments := true
 )read boot_doms.input
-)lisp (make-databases "" nil)
+)lisp (make-databases nil nil)
