@@ -1,5 +1,11 @@
 2012-01-19  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* src/algebra/boo_db.input, src/algebra/Makefile.in,
+	src/interp/daase.lisp, src/etc/Makefile.in: Generate
+	browser data only at end of build.
+
+2012-01-19  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	* src/etc/asq.c.pamphlet: Fix bitrot.
 
 2012-01-16  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
